# homeassistant-switch2

./: README.md  hacs.json  pyproject.toml  test_api.py
.github/workflows/: hassfest.yml  validate-hacs.yml
custom_components/switch2/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
