[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "switch2"
version = "0.1.0"
description = "Client library for the Switch2 energy portal"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
include = ["switch2*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
