[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-switch2"
version = "0.1.2"
description = "Home Assistant integration for Switch2 district heating"
requires-python = ">=3.11"
dependencies = [
    "switch2>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
